--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_Viajes">
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.viajes.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.example.viajes.ui.viajes.ViajesFragment"
+        android:label="@string/menu_Viajes"
+        tools:layout="@layout/fragment_viajes" />
 
     <fragment
         android:id="@+id/nav_gallery"
